rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x519_1997_ProtocolObjectIdentifiers.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x519_1997_ProtocolObjectIdentifiers.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod protocol_object_identifiers {
    extern crate alloc;
    use super::useful_definitions::{ID_AC, ID_AS, ID_CONTRACT, ID_PACKAGE, ID_ROS_OBJECT, ID_SE};
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[doc = "  application contexts"]
    pub static ID_AC_DIRECTORY_ACCESS_AC: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***ID_AC, &[1u32]].concat()).unwrap().to_owned());
    pub static ID_AC_DIRECTORY_ACCESS_WITH2OR3SE_AC: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| {
            Oid::new(&[&***ID_AC, &[10u32]].concat())
                .unwrap()
                .to_owned()
        });
    pub static ID_AC_DIRECTORY_OPERATIONAL_BINDING_MANAGEMENT_AC: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***ID_AC, &[3u32]].concat()).unwrap().to_owned());
    pub static ID_AC_DIRECTORY_OPERATIONAL_BINDING_MANAGEMENT_WITH2OR3SE_AC: LazyLock<
        ObjectIdentifier,
    > = LazyLock::new(|| {
        Oid::new(&[&***ID_AC, &[16u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_AC_DIRECTORY_SYSTEM_AC: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***ID_AC, &[2u32]].concat()).unwrap().to_owned());
    pub static ID_AC_DIRECTORY_SYSTEM_WITH2OR3SE_AC: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| {
            Oid::new(&[&***ID_AC, &[11u32]].concat())
                .unwrap()
                .to_owned()
        });
    pub static ID_AC_RELIABLE_SHADOW_CONSUMER_INITIATED_AC: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***ID_AC, &[7u32]].concat()).unwrap().to_owned());
    pub static ID_AC_RELIABLE_SHADOW_CONSUMER_INITIATED_WITH2OR3SE_AC: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| {
            Oid::new(&[&***ID_AC, &[15u32]].concat())
                .unwrap()
                .to_owned()
        });
    pub static ID_AC_RELIABLE_SHADOW_SUPPLIER_INITIATED_AC: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***ID_AC, &[6u32]].concat()).unwrap().to_owned());
    pub static ID_AC_RELIABLE_SHADOW_SUPPLIER_INITIATED_WITH2OR3SE_AC: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| {
            Oid::new(&[&***ID_AC, &[14u32]].concat())
                .unwrap()
                .to_owned()
        });
    pub static ID_AC_SHADOW_CONSUMER_INITIATED_AC: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***ID_AC, &[4u32]].concat()).unwrap().to_owned());
    pub static ID_AC_SHADOW_CONSUMER_INITIATED_ASYNCHRONOUS_AC: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***ID_AC, &[9u32]].concat()).unwrap().to_owned());
    pub static ID_AC_SHADOW_CONSUMER_INITIATED_WITH2OR3SE_AC: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| {
            Oid::new(&[&***ID_AC, &[13u32]].concat())
                .unwrap()
                .to_owned()
        });
    pub static ID_AC_SHADOW_SUPPLIER_INITIATED_AC: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***ID_AC, &[5u32]].concat()).unwrap().to_owned());
    pub static ID_AC_SHADOW_SUPPLIER_INITIATED_ASYNCHRONOUS_AC: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***ID_AC, &[8u32]].concat()).unwrap().to_owned());
    pub static ID_AC_SHADOW_SUPPLIER_INITIATED_WITH2OR3SE_AC: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| {
            Oid::new(&[&***ID_AC, &[12u32]].concat())
                .unwrap()
                .to_owned()
        });
    pub static ID_AS_2OR3SE: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***ID_AS, &[7u32]].concat()).unwrap().to_owned());
    #[doc = "  ASEs (obsolete)"]
    #[doc = "\tid-ase-readASE\t\t\t\t\t\t\tOBJECT IDENTIFIER\t::=\t{id-ase 1}"]
    #[doc = "\tid-ase-searchASE   \t\t\t\t\t\tOBJECT IDENTIFIER\t::=\t{id-ase 2}"]
    #[doc = "\tid-ase-modifyASE   \t\t\t\t\t\tOBJECT IDENTIFIER\t::=\t{id-ase 3}"]
    #[doc = "\tid-ase-chainedReadASE  \t\t\t\t\tOBJECT IDENTIFIER\t::=\t{id-ase 4}"]
    #[doc = "\tid-ase-chainedSearchASE\t\t\t\t\tOBJECT IDENTIFIER\t::=\t{id-ase 5}"]
    #[doc = "\tid-ase-chainedModifyASE\t\t\t\t\tOBJECT IDENTIFIER\t::=\t{id-ase 6}"]
    #[doc = "\tid-ase-operationalBindingManagementASE\t\t\tOBJECT IDENTIFIER\t::=\t{id-ase 7}"]
    #[doc = "\tid-ase-shadowConsumerASE\t\t\t\t\tOBJECT IDENTIFIER\t::=\t{id-ase 8}"]
    #[doc = "\tid-ase-shadowSupplierASE  \t\t\t\t\tOBJECT IDENTIFIER\t::=\t{id-ase 9}"]
    #[doc = "  abstract syntaxes"]
    pub static ID_AS_DIRECTORY_ACCESS_AS: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***ID_AS, &[1u32]].concat()).unwrap().to_owned());
    pub static ID_AS_DIRECTORY_OPERATIONAL_BINDING_MANAGEMENT_AS: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***ID_AS, &[4u32]].concat()).unwrap().to_owned());
    pub static ID_AS_DIRECTORY_RELIABLE_SHADOW_AS: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***ID_AS, &[5u32]].concat()).unwrap().to_owned());
    pub static ID_AS_DIRECTORY_SHADOW_AS: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***ID_AS, &[3u32]].concat()).unwrap().to_owned());
    pub static ID_AS_DIRECTORY_SYSTEM_AS: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***ID_AS, &[2u32]].concat()).unwrap().to_owned());
    pub static ID_AS_RELIABLE_SHADOW_BINDING_AS: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***ID_AS, &[6u32]].concat()).unwrap().to_owned());
    #[doc = " contracts"]
    pub static ID_CONTRACT_DAP: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_CONTRACT, &[1u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_CONTRACT_DOP: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_CONTRACT, &[5u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_CONTRACT_DSP: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_CONTRACT, &[2u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_CONTRACT_SHADOW_CONSUMER: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_CONTRACT, &[3u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_CONTRACT_SHADOW_SUPPLIER: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_CONTRACT, &[4u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_PACKAGE_CHAINED_MODIFY: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_PACKAGE, &[6u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_PACKAGE_CHAINED_READ: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_PACKAGE, &[4u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_PACKAGE_CHAINED_SEARCH: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_PACKAGE, &[5u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_PACKAGE_DAP_CONNECTION: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_PACKAGE, &[10u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_PACKAGE_DISP_CONNECTION: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_PACKAGE, &[12u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_PACKAGE_DOP_CONNECTION: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_PACKAGE, &[13u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_PACKAGE_DSP_CONNECTION: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_PACKAGE, &[11u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_PACKAGE_MODIFY: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_PACKAGE, &[3u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_PACKAGE_OPERATIONAL_BINDING_MANAGEMENT: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| {
            Oid::new(&[&***ID_PACKAGE, &[9u32]].concat())
                .unwrap()
                .to_owned()
        });
    #[doc = " packages"]
    pub static ID_PACKAGE_READ: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_PACKAGE, &[1u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_PACKAGE_SEARCH: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_PACKAGE, &[2u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_PACKAGE_SHADOW_CONSUMER: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_PACKAGE, &[7u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_PACKAGE_SHADOW_SUPPLIER: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_PACKAGE, &[8u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_ROS_OBJECT_DAP_DSA: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_ROS_OBJECT, &[3u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_ROS_OBJECT_DIRECTORY: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_ROS_OBJECT, &[2u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_ROS_OBJECT_DOP_DSA: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_ROS_OBJECT, &[7u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_ROS_OBJECT_DSP_DSA: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_ROS_OBJECT, &[4u32]].concat())
            .unwrap()
            .to_owned()
    });
    #[doc = " ROS Objects"]
    pub static ID_ROS_OBJECT_DUA: LazyLock<ObjectIdentifier> = LazyLock::new(|| {
        Oid::new(&[&***ID_ROS_OBJECT, &[1u32]].concat())
            .unwrap()
            .to_owned()
    });
    pub static ID_ROS_OBJECT_INITIATING_CONSUMER_DSA: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| {
            Oid::new(&[&***ID_ROS_OBJECT, &[8u32]].concat())
                .unwrap()
                .to_owned()
        });
    pub static ID_ROS_OBJECT_INITIATING_SUPPLIER_DSA: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| {
            Oid::new(&[&***ID_ROS_OBJECT, &[10u32]].concat())
                .unwrap()
                .to_owned()
        });
    pub static ID_ROS_OBJECT_RESPONDING_CONSUMER_DSA: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| {
            Oid::new(&[&***ID_ROS_OBJECT, &[11u32]].concat())
                .unwrap()
                .to_owned()
        });
    pub static ID_ROS_OBJECT_RESPONDING_SUPPLIER_DSA: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| {
            Oid::new(&[&***ID_ROS_OBJECT, &[9u32]].concat())
                .unwrap()
                .to_owned()
        });
    pub static ID_SE_SPKMTHREEWAYSE: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***ID_SE, &[2u32]].concat()).unwrap().to_owned());
    #[doc = " GULS SESE Security exchanges"]
    pub static ID_SE_THREEWAYSE: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::new(&[&***ID_SE, &[1u32]].concat()).unwrap().to_owned());
}
