rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x519_2001_IDMProtocolSpecification.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x519_2001_IDMProtocolSpecification.asn1
---
Warnings:
LinkerError in ASN grammar: Mismatching argument for parameter Protocols of Bind


Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod idmprotocol_specification {
    extern crate alloc;
    use super::certificate_extensions::GeneralName;
    use super::useful_definitions::CERTIFICATE_EXTENSIONS;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum Abort {
        mistypedPDU = 0,
        unboundRequest = 1,
        invalidPDU = 2,
        resourceLimitation = 3,
        connectionFailed = 4,
        invalidProtocol = 5,
        reasonNotSpecified = 6,
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice)]
    pub enum Code {
        local(Integer),
        global(ObjectIdentifier),
    }
    #[doc = " Inner type "]
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(enumerated)]
    pub enum RejectReason {
        mistypedPDU = 0,
        duplicateInvokeIDRequest = 1,
        unsupportedOperationRequest = 2,
        unknownOperationRequest = 3,
        mistypedArgumentRequest = 4,
        resourceLimitationRequest = 5,
        unknownInvokeIDResult = 6,
        mistypedResultRequest = 7,
        unknownInvokeIDError = 8,
        unknownError = 9,
        mistypedParameterError = 10,
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct Reject {
        #[rasn(identifier = "invokeID")]
        pub invoke_id: Integer,
        pub reason: RejectReason,
    }
    impl Reject {
        pub fn new(invoke_id: Integer, reason: RejectReason) -> Self {
            Self { invoke_id, reason }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash, Copy)]
    #[rasn(delegate)]
    pub struct Unbind(pub ());
}
